<resources>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,\nnullam ligula elementum duis tellus maecenas nec fermentum sed dictum\nlaoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia\nsenectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,\nsemper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum\naenean et eget pretium volutpat eu dictum dictumst.\n\nPraesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor\nullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus\nmauris cras aptent non et ultricies. \nIaculis porttitor etiam pulvinar proin fringilla\nad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris\nleo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra\nquam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin\nturpis viverra molestie cras quis.\nDignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,\nelementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum\ncommodo montes convallis curae facilisis.\n Vitae diam phasellus litora ad aenean\nhimenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia\nlacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat\ninterdum bibendum scelerisque magnis, penatibus non sollicitudin convallis\negestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi\ninteger non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra\ndis.\n\nNisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque\nfeugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra\ndonec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id\nconubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices\nvestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse\nclass facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci\nfaucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,\ntempus purus et odio senectus sodales vulputate, ligula malesuada dis habitasse\nnullam pellentesque.</string>
    <string name="app_name">MELI-job-readiness</string>
    <string name="search_meli">Buscar en Mercado Libre</string>
    <string name="free_shipping">Envio gratis</string>
    <string name="app_label">MELI-android-job-readiness</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask">Preguntar</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="neww">Nuevo</string>
    <string name="used">Usado</string>
    <string name="sell">Vendidos</string>
    <string name="send_user">Enviar a Nombre de Usuario</string>
    <string name="search">Search</string>
    <string name="add_cart">Add to cart</string>
    <string name="favorite">Favoritos</string>
    <string name="seller">Vendedor con</string>
    <string name="seller_verify">identidad verificada</string>
    <string name="description">Descripción</string>
    <string name="query_check">The search shouldn\'t contains special character or start with a space</string>
    <string name="notification">Notificaciones</string>
    <string name="shopping">Mis compras</string>
    <string name="menu">Más</string>
    <string name="home">Inicio</string>
    <string name="add_to_fav">Agregar a favoritos</string>
    <string name="share">Compartir</string>
</resources>