<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/fav"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
    <item
        android:id="@+id/shopping"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/shopping" />

    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification" />

    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />
</menu>